// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Components/common/Statut Default 1`] = `
<span
  class="cap-first small bold"
>
  <span
    class="bg-neutral color-bg pill py-xs px-s"
  >
    
    indéfini
    
  </span>
</span>
`;

exports[`Automated Storybook Snapshots Components/common/Statut With Color 1`] = `
<span
  class="cap-first small bold"
>
  <span
    class="bg-success color-bg pill py-xs px-s"
  >
    
    Mon statut
    
  </span>
</span>
`;
